--- a/style.css
+++ b/style.css
@@ -15,5 +15,125 @@ body {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 10px 30px;
+  /* line-height: 2em; */
+}
+.primary-button {
+  outline: 0;
+  border: 0;
+  padding: 15px 20px;
+  background-image: linear-gradient(85deg) red red;
+  color: rgb(218, 39, 39);
+  font-size: 18px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: black;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 0px;
+}
+.section-title {
+  text-align: center;
+}
+.section-title h2 {
+  font-size: 25px;
+  /* display: inline-block; */
+  /* border-bottom: 2px solid #ff008e; */
+  margin: 50px 0;
+}
+#home {
+  margin-top: 40px;
+  margin-bottom: 50px;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
+  align-items: center;
+}
+.navigation {
+  display: flex;
+}
+.navigation li {
+  list-style: none;
+  margin: 10px;
+}
+.navigation li a {
+  text-decoration: none;
+  color: black;
+  padding: 15px 10px;
+}
+.banner {
+  height: calc(100vh - 80px);
+  min-height: 500px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.banner-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.banner-left h1 {
+  font-size: 45px;
+  color: black;
+}
+.banner-left p {
+  color: black;
+  font-size: 18px;
+  line-height: 1.5;
+  margin: 20px 0;
+}
+.banner-right {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.banner-right img {
+  border: 1px solid rgb(233, 227, 227);
+  border-radius: 100%;
+  padding: 10px;
+}
+#company-logo {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 30px;
+  border-top: 1px solid rgba(233, 231, 231, 0.74);
+  border-bottom: 1px solid rgba(233, 231, 231, 0.74);
+  justify-content: center;
+  align-items: center;
+  padding: 20px 0;
+}
+.logo img {
+  margin: 0px 30px;
+  object-fit: cover;
+}
+.collection {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+}
+
+/* footer section */
+footer {
+  background-color: #0a0826;
+  height: 200px;
+  text-align: center;
+  color: white;
+  align-items: center;
+  justify-content: center;
+}
+small.text-section {
+  font-weight: 10px;
+  font-size: 5%;
+}
+.social-media a {
+  justify-content: center;
+  align-items: center;
+  padding: 0px 10px;
+  color: white;
+  background-color: rgb(34, 33, 33);
+  border-radius: 200%;
 }
