--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ nav {
   grid-template-columns: repeat(3, 1fr);
   justify-content: space-between;
   line-height: 1.5em;
-  /* margin: 0 40px; */
+  /* margin: 0 40p x; */
   /* margin: 0 auto; */
   /* align-items: center; */
   /* margin-top: 40px; */
@@ -157,14 +157,14 @@ nav {
   font-size: 12px;
   color: gray;
 }
-.see-more {
-  text-align: right;
-}
-.see-more a {
+.see-more,
+a {
   text-decoration: none;
   color: mediumvioletred;
   font-size: 15px;
-  margin-bottom: 50px;
+  margin: 50px 50px 50px 50px;
+  /* text-align: right; */
+  /* justify-content: right; */
 }
 
 /* Popular Collection section end here */
@@ -176,12 +176,6 @@ nav {
   grid-template-columns: repeat(2, 1fr);
   margin: 0 auto;
   /* border: 1px solid gray; */
-}
-.banner-bottom-right {
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* justify-content: center; */
-  /* align-items: flex-start; */
 }
 .banner-bottom-right h1 {
   font-size: 45px;
