--- a/style.css
+++ b/style.css
@@ -23,12 +23,13 @@ body {
 .primary-button {
   text-decoration: none;
   border: 1px solid white;
-  border-radius: 20px;
+  border-radius: 4px;
   color: white;
   padding: 10px 20px;
   background: linear-gradient(45deg, rgb(233, 12, 104), rgb(196, 14, 75));
   font-weight: bold;
 }
+
 /* button span {
   padding-right: 20px;
 } */
@@ -37,14 +38,21 @@ body {
 }
 .section-title h2 {
   font-size: 25px;
-  /* display: inline-block; */
-  /* border-bottom: 2px solid #ff008e; */
   margin: 50px 0;
 }
 /* Header section start from here */
 #home {
   margin-top: 40px;
-  /* margin-bottom: 30px; */
+}
+.menu-title {
+  padding: 5px 10px;
+}
+.menu-title:hover {
+  background: linear-gradient(45deg, rgb(233, 12, 104), rgb(196, 14, 75));
+  padding: 5px 10px;
+  color: white;
+  transition: width 5s, height 5s, transform 5s;
+  border-radius: 4px;
 }
 nav {
   display: flex;
@@ -54,7 +62,9 @@ nav {
 }
 .navigation {
   display: flex;
+  padding: 5px;
 }
+
 .navigation li {
   list-style: none;
   margin: 10px;
@@ -63,6 +73,13 @@ nav {
   text-decoration: none;
   color: black;
   padding: 15px 10px;
+}
+.hover-items:hover {
+  background: linear-gradient(45deg, rgb(233, 12, 104), rgb(196, 14, 75));
+  padding: 5px 10px;
+  color: white;
+  transition: width 5s, height 5s, transform 5s;
+  border-radius: 4px;
 }
 /* Banner Top section start from here */
 .banner-top {
@@ -76,6 +93,9 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+}
+.banner-title {
+  padding: 5px;
 }
 .banner-left h1 {
   font-size: 45px;
@@ -93,9 +113,14 @@ nav {
   align-items: flex-start;
 }
 .banner-right img {
-  border: 1px solid rgb(233, 227, 227);
+  border: 1px solid rgb(206, 198, 198);
   border-radius: 100%;
   padding: 10px;
+  transition: width 5s, height 5s, transform 10s;
+  box-shadow: 1px 1px 5px gray;
+}
+.banner-right img:hover {
+  background: linear-gradient(45deg, rgb(233, 12, 104), rgb(196, 14, 75));
 }
 /* Banner Top section end here */
 
@@ -104,11 +129,15 @@ nav {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 30px;
-  border-top: 1px solid rgba(233, 231, 231, 0.74);
-  border-bottom: 1px solid rgba(233, 231, 231, 0.74);
+  border-top: 1px solid rgba(192, 178, 178, 0.74);
+  border-bottom: 1px solid rgba(192, 178, 178, 0.74);
   justify-content: center;
   align-items: center;
   padding: 20px 20px;
+}
+#company-logo:hover {
+  border-top: 1px solid rgb(233, 12, 104);
+  border-bottom: 1px solid rgb(233, 12, 104);
 }
 .logo img {
   margin: 0px 30px;
@@ -122,19 +151,18 @@ nav {
   grid-template-columns: repeat(3, 1fr);
   justify-content: space-between;
   line-height: 1.5em;
-  /* margin: 0 40p x; */
-  /* margin: 0 auto; */
-  /* align-items: center; */
-  /* margin-top: 40px; */
 }
 .card {
   background-color: white;
   border-radius: 5px;
   width: 329px;
   height: 476px;
+  box-shadow: 5px 7px 20px gray;
+}
+.card:hover {
+  border: 2px solid rgb(233, 12, 104);
 }
 .card img {
-  /* align-items: center; */
   margin: 15px 15px 10px 15px;
 }
 .card-content {
@@ -162,9 +190,10 @@ a {
   text-decoration: none;
   color: mediumvioletred;
   font-size: 15px;
-  margin: 50px 50px 50px 50px;
-  /* text-align: right; */
-  /* justify-content: right; */
+}
+.see-more,
+a:hover {
+  border: 1px solid gray;
 }
 
 /* Popular Collection section end here */
@@ -199,6 +228,10 @@ a {
   /* padding: 50px 50px; */
   width: 100%;
   margin: 38px -88px 5px -33px;
+  box-shadow: 1px 1px 10px gray;
+}
+.banner-bottom-left img:hover {
+  border: 2px solid rgb(233, 12, 104);
 }
 /* Banner Bottom end here */
 /* footer section start from here */
@@ -211,14 +244,133 @@ footer {
   color: white;
   padding-top: 50px;
 }
-/* .text-section h3 {
-  font-weight: 30px;
-  font-size: 5%;
-} */
 .social-media a {
-  /* justify-content: center; */
-  /* align-items: center; */
   padding: 30px 10px;
   color: white;
 }
 /* footer section end here */
+
+/* Media Queries start from here */
+@media screen and (max-width: 500px) {
+  .cart-items {
+    width: 50%;
+    display: flex;
+    justify-content: left;
+    align-items: flex-end;
+  }
+  .card-icon {
+    width: 50%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+  }
+  .banner-left h1 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    align-items: center;
+  }
+  .banner-right img {
+    width: 50%;
+    /* height: 50%; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .navigation {
+    display: none;
+  }
+  .logos {
+    width: 50%;
+    margin-bottom: 700px;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 50px;
+    grid-template-rows: repeat(1, 1fr);
+    /* grid-template-columns: repeat(1, 1fr); */
+    justify-content: center;
+    align-items: center;
+  }
+  .collection,
+  .card {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-bottom: 50px;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+  }
+  .banner-bottom-left {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+  .banner-bottom-left img {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    gap: 30px;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 900px) {
+  .card-icon {
+    /* width: 50%; */
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+  }
+  /* .banner-left h1 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    align-items: center;
+  } */
+  .banner-right img {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .navigation {
+    display: none;
+  }
+  .logos {
+    width: 50%;
+    margin-bottom: 700px;
+    display: flex;
+    flex-direction: column;
+    grid-gap: 50px;
+    grid-template-rows: repeat(1, 1fr);
+    /* grid-template-columns: repeat(1, 1fr); */
+    justify-content: center;
+    align-items: center;
+  }
+  .collection,
+  .card {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-bottom: 50px;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+  }
+  .banner-bottom-left {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+  .banner-bottom-left img {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    gap: 30px;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    align-items: center;
+  }
+}
+/* Media Queries end here */
